# tari-transactions-wasm

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: check_licence.yml  clippy-check.yml  wasm.yml
tari_transaction_services/: Cargo.toml  LICENSE  Makefile  README.md
tari_transaction_services/src/: lib.rs  scan_outputs.rs  scan_outputs_ledger.rs
tari_wrappers/: build.rs
tari_wrappers/base_layer/common_types/: Cargo.toml
tari_wrappers/base_layer/common_types/src/: lib.rs  wallet_types.rs
tari_wrappers/base_layer/core/: Cargo.toml
tari_wrappers/base_layer/core/src/: lib.rs
tari_wrappers/base_layer/core/src/common/: limited_reader.rs  mod.rs
tari_wrappers/base_layer/core/src/consensus/: mod.rs
tari_wrappers/base_layer/core/src/consensus/consensus_encoding/: hashing.rs  string.rs
tari_wrappers/base_layer/core/src/covenants/: arguments.rs  byte_codes.rs  context.rs  covenant.rs  decoder.rs  encoder.rs  fields.rs  macros.rs  mod.rs  output_set.rs
tari_wrappers/base_layer/core/src/covenants/filters/: absolute_height.rs  and.rs  field_eq.rs  fields_hashed_eq.rs  fields_preserved.rs  identity.rs  mod.rs  not.rs  or.rs  output_hash_eq.rs  xor.rs
tari_wrappers/base_layer/core/src/transactions/: aggregated_body.rs  format_currency.rs  mod.rs  tari_amount.rs  weight.rs
tari_wrappers/base_layer/core/src/transactions/key_manager/: mod.rs  wrapper.rs
tari_wrappers/base_layer/core/src/transactions/transaction_components/: encrypted_data.rs  error.rs  kernel_features.rs  mod.rs  output_type.rs  range_proof_type.rs  transaction_input.rs  transaction_input_version.rs  transaction_kernel_version.rs  transaction_output.rs  transaction_output_version.rs  unblinded_output.rs  wallet_output.rs  wallet_output_builder.rs
tari_wrappers/base_layer/core/src/transactions/transaction_components/side_chain/: validator_node_registration.rs
tari_wrappers/base_layer/core/src/transactions/transaction_protocol/: mod.rs
tari_wrappers/base_layer/key_manager/: Cargo.toml
tari_wrappers/base_layer/key_manager/src/: key_manager.rs  lib.rs
tari_wrappers/base_layer/key_manager/src/key_manager_service/: cipher_seed.rs  error.rs  interface.rs  mod.rs
tari_wrappers/base_layer/key_manager/src/key_manager_service/storage/: mod.rs
tari_wrappers/base_layer/key_manager/src/key_manager_service/storage/database/: mod.rs
tari_wrappers/base_layer/wallet/: Cargo.toml
tari_wrappers/base_layer/wallet/src/: lib.rs  output_source.rs
tari_wrappers/comms/core/: Cargo.toml
tari_wrappers/comms/core/src/: lib.rs  types.rs
